--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "sage",
     "scss"
   ],
+  "main": "server.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/ageychik/pokedex"
