--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "body-scroll-lock": "3.1.5",
     "classnames": "2.2.6",
     "express": "4.17.1",
     "node-sass": "4.14.1",
